--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@tabler/icons-react": "^3.2.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.0.25",
+    "framer-motion": "^11.1.3",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
