--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.12.1",
     "@tabler/icons-react": "^3.2.0",
+    "@vercel/analytics": "^1.2.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
